--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="one">
             <div class="content">
                 <div class="main">
-                    Comparing search bar UI components 
+                    Comparing Search Bar UI Components 
                 </div>
                 <div class="sub">
                     Gmail, Discord, and Steam
