--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
             <img src="./mouse.png" alt="v1" style="width: 500px; height: auto;">
             Steam search bar keyboard state model:
             <img src="./keyboard.png" alt="v1" style="width: 500px; height: auto;">
-            Steam search bar revised mouse state model:
+            Steam search bar revised mouse state model (slightly more convenient for mouse users, but keyboard users still have to repeatedly hit tab to get to the desired component):
             <img src="./revised_mouse.png" alt="v1" style="width: 500px; height: auto;">
-            Steam search bar revised keyboard state model:
+            Steam search bar revised keyboard state model (CMD + K automatically focuses on search bar, mouse-only users still have to move their mouse to click on the search bar.):
             <img src="./revised_keyboard.png" alt="v1" style="width: 500px; height: auto;">
  
             <!-- <div class="blue-box">
